--- a/app.json
+++ b/app.json
@@ -38,6 +38,13 @@
             "backgroundColor": "#000000"
           }
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "La aplicación necesita acceso a tus fotos para agregar imágenes a los empleos.",
+          "cameraPermission": "La aplicación necesita acceso a la cámara para tomar fotos de los empleos."
+        }
       ]
     ],
     "experiments": {
